Fix for page jumping on single hero page
Added set height and min-height to hero image to prevent page jumping.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -59,6 +59,7 @@ hr.tight {
 
 .img-tall {
     display: block;
+    min-height: 600px;
     max-width: 100%;
     height: auto;
 }
@@ -93,7 +94,7 @@ hr.tight {
     }
 
     .img-tall {
-        max-height: 600px;
+        height: 600px;
         width: auto;
         margin-left: auto;
         margin-right: auto;
